added third line of story

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <body>
         <p>It was a dark and stormy night...</p>
         <p>She was all alone in her home.</p>
+        <p>... or so she thought...</p>
     </body>
 </html>
