added fourth line

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <body>
         <p>It was a dark and stormy night...</p>
         <p>She was all alone in her home.</p>
-        <p>... or so she thought...</p>
+        <p>... or so she thought...</p><br/>
+        <p>She heard a sound coming from outside her window...</p>
     </body>
 </html>
