added third line of story

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <p>She was all alone in her home.</p>
         <p>... or so she thought...</p><br/>
         <p>She heard a sound coming from outside her window...</p>
+        <p>it sounded like singing, but was distinctly garbled</p>
     </body>
 </html>
