the story continues (line 6)

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <p>... or so she thought...</p><br/>
         <p>She heard a sound coming from outside her window...</p>
         <p>it sounded like singing, but was distinctly garbled</p>
+        <p>"I have to find out what is out there," she thought to herself.</p>
     </body>
 </html>
